tests/local-02/out.txt
error: undefined value identifier: x
  ┌─ inp.sml:8:5
  │
8 │     x
  │     ^

typechecking failed
